--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "clipboard-polyfill": "^2.8.6",
     "core-js": "^3.4.3",
     "countup.js": "^2.0.4",
+    "d2-crud-plus": "^1.16.2",
+    "d2-crud-x": "^2.10.2",
+    "d2p-extends": "^1.9.11",
     "dayjs": "^1.8.17",
     "echarts": "^4.5.0",
     "element-ui": "^2.13.2",
@@ -47,10 +50,7 @@
     "vue-router": "^3.1.3",
     "vue-splitpane": "^1.0.6",
     "vue-ueditor-wrap": "^2.4.1",
-    "vuex": "^3.1.2",
-    "d2-crud-plus": "^1.16.2",
-    "d2-crud-x": "^2.10.2",
-    "d2p-extends": "^1.9.11"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@d2-projects/vue-filename-injector": "^1.1.0",
